--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	<div>
+<h3>What is the capital of India</h3>
+<form action="">
+<input type="radio" name="state" value="New delhi">
+   <label for="">New delhi</label><br>
+
+   <input type="radio" name="state" value="Mumbai">
+   <label for="">Mumbai</label>
+
+</form>
+<blockquote class="text" >New Delhi is the capital of India </blockquote>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
