--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <h3>What is the capital of India</h3>
 <form action="">
 <input type="radio" name="state" value="New delhi">
-   <label for="">New delhi</label><br>
+   <label for="">New Delhi</label><br>
 
    <input type="radio" name="state" value="Mumbai">
    <label for="">Mumbai</label>
