--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
    <label for="">Mumbai</label>
 
 </form>
-<blockquote class="text" >New Delhi is the capital of India </blockquote>
+<blockquote class="text" >New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
