--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
    <label for="">Mumbai</label>
 
 </form>
-<blockquote class="text" >New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+<blockquote class="text" >Text to be rendered in blockquote: New Delhi is the capital of India and an administrative district of NCT Delhi. and is referred from <a>https://en.wikipedia.org/wiki/New_Delhi</a></blockquote>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
