--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<div>
+        <!-- header -->
 <h3>What is the capital of India</h3>
 <form action="">
 <input type="radio" name="state" value="New delhi">
@@ -17,7 +18,7 @@
    <label for="">Mumbai</label>
 
 </form>
-<blockquote class="text" >Text to be rendered in blockquote: New Delhi is the capital of India and an administrative district of NCT Delhi. and is referred from <a>https://en.wikipedia.org/wiki/New_Delhi</a></blockquote>
+<blockquote class="text" cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
